crates/ts/tests/snapshots/baseline_diff__baseline_required_parameter_added.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: ParameterAdded
  is_breaking: true
  description: "Required parameter `b` was added to `f`"
  before: ~
  after: "b: number"
  has_migration_target: false
