crates/ts/tests/snapshots/baseline_diff__baseline_rest_parameter_added.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: "Added(Parameter { name: \"args\" })"
  is_breaking: false
  description: "Rest parameter `args` was added to `f`"
  before: ~
  after: "...args: unknown[]"
  has_migration_target: false
