crates/ts/tests/snapshots/baseline_diff__baseline_rest_parameter_removed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: RestParameterRemoved
  is_breaking: true
  description: "Rest parameter `args` was removed from `f`"
  before: "...args: unknown[]"
  after: ~
  has_migration_target: false
