crates/ts/tests/snapshots/baseline_diff__baseline_return_type_changed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: ReturnTypeChanged
  is_breaking: true
  description: "Return type of `f` changed from `string` to `number`"
  before: string
  after: number
  has_migration_target: false
