crates/ts/tests/snapshots/baseline_diff__baseline_star_reexport_filtered_real_symbols_still_diff.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: oldFunc
  qualified_name: oldFunc
  kind: Function
  change_type: "Renamed { from: Symbol { kind: Function }, to: Symbol { kind: Function } }"
  is_breaking: true
  description: "Exported function `oldFunc` was renamed to `newFunc`"
  before: oldFunc
  after: newFunc
  has_migration_target: false
