crates/ts/tests/snapshots/baseline_diff__baseline_symbol_added.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: greet
  qualified_name: greet
  kind: Function
  change_type: "Added(Symbol { kind: Function })"
  is_breaking: false
  description: "Exported function `greet` was added"
  before: ~
  after: "function: greet: void"
  has_migration_target: false
