crates/ts/tests/snapshots/baseline_diff__baseline_symbol_removed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: greet
  qualified_name: greet
  kind: Function
  change_type: "Removed(Symbol { kind: Function })"
  is_breaking: true
  description: "Exported function `greet` was removed"
  before: "function: greet: void"
  after: ~
  has_migration_target: false
