crates/ts/tests/snapshots/baseline_diff__baseline_symbol_renamed_top_level.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: ChipGroup
  qualified_name: test.ChipGroup
  kind: Function
  change_type: "Renamed { from: Symbol { kind: Function }, to: Symbol { kind: Function } }"
  is_breaking: true
  description: "Exported function `ChipGroup` was renamed to `LabelGroup`"
  before: ChipGroup
  after: LabelGroup
  has_migration_target: false
