crates/ts/tests/snapshots/baseline_diff__baseline_type_parameter_added_required.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: "Added(TypeParameter { name: \"U\" })"
  is_breaking: true
  description: "Required type parameter `U` was added to `f`"
  before: ~
  after: U
  has_migration_target: false
