crates/ts/tests/snapshots/baseline_diff__baseline_type_parameter_constraint_changed.snap
---
source: crates/ts/tests/baseline_diff.rs
expression: "diff(&old, &new)"
---
- symbol: f
  qualified_name: f
  kind: Function
  change_type: TypeParameterConstraintChanged
  is_breaking: true
  description: "Constraint on type parameter `T` of `f` changed from `object` to `Record<string, unknown>`"
  before: object
  after: "Record<string, unknown>"
  has_migration_target: false
